--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,128 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
-  <body>
+  <body class="page__body">
+    <header class="main-header">
+      <a href="/" class="main-header__icon">
+        <img src="img/logo.svg" width="185" height="96" alt="City of Cedona">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list site-list--opened">
+            <li class="site-list__item--active"><a href="#">Главная</a></li>
+            <li class="site-list__item"><a href="#">Фото и видео</a></li>
+            <li class="site-list__item"><a href="#">Формат отзыва</a></li>
+            <li class="site-list__item"><a href="#">HTML academy</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+        <div class="intro">
+          <img class="intro__background" src="img/back-mobile.png" alt="Background view">
+        </div>
+        <section class="welcome">
+          <div class="welcome-header">
+            <h1 class="welcome__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+            <p class="welcome__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+          </div>
+          </section>
 
+
+      <main class="main-container">
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+          <ul class="advantages__list">
+            <li class="advantages__item advantages__item--accent">
+              <h3 class="advantages__title">НАСТОЯЩИЙ ГОРОДОК</h3>
+                <p class="advantages__number">— №1 —</p>
+                <p class="advantages__description">Седона не атракцион для туристов, там прячется своя жизнь</p>
+                <img src="img/photo-city@1x1.png" alt="Sedona" class="advantages__photo">
+
+                <ul class="extra-advantages__list">
+                  <li class="extra-advantages__item extra-advantages__item--accomodation">
+                    <h2 class="extra-advantages__title">Жилье</h2>
+                    <p class="extra-advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                  </li>
+
+                  <li class="extra-advantages__item extra-advantages__item--food">
+                    <h2 class="extra-advantages__title">Еда</h2>
+                    <p class="extra-advantages__description">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
+                  </li>
+
+                  <li class="extra-advantages__item extra-advantages__item--souvenirs">
+                    <h2 class="extra-advantages__title">Сувениры</h2>
+                    <p class="extra-advantages__description">Не только китайского, но и местного производства!</p>
+                  </li>
+                </ul>
+            </li>
+
+            <li class="advantages__item advantages__item--accent">
+              <h3 class="advantages__title">Там есть Мост дьявола</h3>
+                <p class="advantages__number">— №2 —</p>
+                <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+                <img src="img/photo-bridge@1x1.png" alt="Bridge" class="advantages__photo">
+            </li>
+
+ <li class="advantages__item">
+              <h3 class="advantages__title">Небольшая площадь</h3>
+                <p class="advantages__number">— №3 —</p>
+                <p class="advantages__description">Все интересные места находятся очень близко</p>
+
+            </li>
+            <li class="advantages__item">
+              <h3 class="advantages__title">Красивая дорога</h3>
+                <p class="advantages__number">— №4 —</p>
+                <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+
+            </li>
+            <li class="advantages__item">
+              <h3 class="advantages__title">Мало туристов</h3>
+                <p class="advantages__number">— №5 —</p>
+                <p class="advantages__description">Большинство едет в гранд каньон и толпится там</p>
+
+            </li>
+        </ul>
+      </section>
+
+      <section class="location">
+        <div class="location__wrapper">
+          <h2 class="location__title">Заинтересовались?</h2>
+          <p class="location__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Cедоне</p>
+          <button class="location__button" type="button"><span>Найти гостинницу</span></button>
+          <img src="img/map-mobile.png" alt="Map">
+        </div>
+      </section>
+    </main>
+
+    <footer class="main-footer">
+      <div class="main-footer__wrapper">
+       <h2 class="main-footer__slogan">#VISITSEDONA</h2>
+        <div class="main-footer__social social">
+          <b class="social__title">Давайте дружить!</b>
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vkontakte" href="#">Вконтакте</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--telegram" href="#">Телеграмм</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="#">Ютуб</a>
+            </li>
+          </ul>
+       </div>
+       <div class="main-footer__copyright copyright">
+        <b class="copyright__text">Разработано</b>
+        <a href="https://htmlacademy.ru/" class="copyright__link">
+        <svg class="copyright--icon"></svg></a>
+       </div>
+     </div>
+
+    </footer>
   </body>
 </html>
