--- a/source/catalog.html
+++ b/source/catalog.html
@@ -34,7 +34,7 @@
 
         <div class="photo__container">
           <div class="photo">
-            <img src="img/photo-1-mobile.png" alt="">
+            <img src="img/photo-1-mobile.png" alt="Дорога на рассвете">
           </div>
           <div class="photo-description">
             <span class="photo__title">Неродные просторы</span><span class="photo__author">Автор фото: Борис</span>
@@ -47,7 +47,7 @@
          </div>
 
           <div class="photo">
-            <img src="img/photo-2-mobile.png" alt="">
+            <img src="img/photo-2-mobile.png" alt="Цветок">
           </div>
           <div class="photo-description">
             <span class="photo__title"></span>Месная растительность<span class="photo__author">Автор фото: Сергей</span>
@@ -60,7 +60,7 @@
          </div>
 
           <div class="photo">
-            <img src="img/photo-3-mobile.png" alt="">
+            <img src="img/photo-3-mobile.png" alt="Трасса в лесу">
           </div>
           <div class="photo-description">
             <span class="photo__title">Дорога на север</span><span class="photo__author">Автор фото: Петр</span>
@@ -73,7 +73,7 @@
           </div>
 
           <div class="photo">
-            <img src="img/photo-4-desktop1.png" alt="">
+            <img src="img/photo-4-desktop1.png" alt="Виды с карьера">
           </div>
           <div class="photo-description">
             <span class="photo__title">Мост дьявола</span><span class="photo__author">Автор фото: Антон</span>
