--- a/source/form.html
+++ b/source/form.html
@@ -44,7 +44,7 @@
 
 
         <div class="intro">
-          <img class="intro__background" src="img/back-mobile.png" alt="Background view">
+          <img class="intro__background" src="img/back-mobile.png" alt="Аризона">
         </div>
 
       <section class="main-form">
