--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
     </header>
 
         <div class="intro">
-          <img class="intro__background" src="img/back-mobile.png" alt="Background view">
+          <img class="intro__background" src="img/back-mobile.png" alt="Аризона">
         </div>
         <section class="welcome">
           <div class="welcome-header">
@@ -41,7 +41,7 @@
               <h3 class="advantages__title">НАСТОЯЩИЙ ГОРОДОК</h3>
                 <p class="advantages__number">— №1 —</p>
                 <p class="advantages__description">Седона не атракцион для туристов, там прячется своя жизнь</p>
-                <img src="img/photo-city@1x1.png" alt="Sedona" class="advantages__photo">
+                <img src="img/photo-city@1x1.png" alt="Местный ресторан" class="advantages__photo">
 
                 <ul class="extra-advantages__list">
                   <li class="extra-advantages__item extra-advantages__item--accomodation">
@@ -65,7 +65,7 @@
               <h3 class="advantages__title">Там есть Мост дьявола</h3>
                 <p class="advantages__number">— №2 —</p>
                 <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-                <img src="img/photo-bridge@1x1.png" alt="Bridge" class="advantages__photo">
+                <img src="img/photo-bridge@1x1.png" alt="Карьер" class="advantages__photo">
             </li>
 
  <li class="advantages__item">
@@ -94,7 +94,7 @@
           <h2 class="location__title">Заинтересовались?</h2>
           <p class="location__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Cедоне</p>
           <button class="location__button" type="button"><span>Найти гостинницу</span></button>
-          <img src="img/map-mobile.png" alt="Map">
+          <img src="img/map-mobile.png" alt="Карта города">
         </div>
       </section>
     </main>
