--- a/source/form.html
+++ b/source/form.html
@@ -12,11 +12,11 @@
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list site-list--opened">
-            <li class="site-list__item"><a href="#">Главная</a></li>
-            <li class="site-list__item"><a href="#">Фото и видео</a></li>
-            <li class="site-list__item--active"><a href="#">Формат отзыва</a></li>
-            <li class="site-list__item"><a href="#">HTML academy</a></li>
+          <ul class="main-nav__list main-nav__list--opened">
+            <li class="main-nav__item"><a href="#">Главная</a></li>
+            <li class="main-nav__item"><a href="#">Фото и видео</a></li>
+            <li class="main-nav__item main-nav__item--active"><a href="#">Формат отзыва</a></li>
+            <li class="main-nav__item"><a href="#">HTML academy</a></li>
           </ul>
         </div>
       </nav>
@@ -35,96 +35,96 @@
           <form action="https://echo.htmlacademy.ru" method="get">
 
 
-          <div class="form">
-            <div class="form__legend">
-              <span class="form__title">Представьтесь</span>
+          <div class="introduction-form">
+            <div class="introduction-form__legend">
+              <span class="introduction-form__title">Представьтесь</span>
               </div>
-              <div class="form__line">
+              <div class="introduction-form__row">
                 <label for="name">Имя*:</label>
-                <input class="form__meet" type="text" placeholder="Петр" id="name" required>
+                <input class="name" type="text" placeholder="Петр" id="name" required>
               </div>
-              <div class="form__line">
+              <div class="introduction-form__row">
                 <label for="surname">Фамилия*:</label>
-                <input class="form__meet" type="text" placeholder="Пустота" id="surname" required>
+                <input class="surname" type="text" placeholder="Пустота" id="surname" required>
               </div>
-              <div class="form__line">
+              <div class="introduction-form__row">
                 <label for="middle-name">Отчество:</label>
-                <input class="form__meet" type="text" placeholder="Викторович" id="middle-name" required>
+                <input class="middle-name" type="text" placeholder="Викторович" id="middle-name" required>
               </div>
             </div>
 
-            <div class="form">
-              <div class="form__legend ">
-                <span class="form__title">Контактная информация:</span>
+            <div class="contact-form">
+              <div class="contact-form__legend ">
+                <span class="contact-form__title">Контактная информация:</span>
               </div>
-              <div class="form__line">
+              <div class="contact-form__row">
                 <label for="phone">Контактный телефон*:</label>
-                <div class="form__line form__line--contact">
-                  <input class="form__contact" type="text" placeholder="Введите телефон" id="phone" required>
-                  <div class="form__icon form__icon--phone"></div>
-              <div class="form__line">
+                <div class="contact-form__phone">
+                  <input class="phone-input" type="text" placeholder="Введите телефон" id="phone" required>
+                  <div class="contact-form__icon contact-form__icon--phone"></div>
+              <div class="contact-form__row">
                 <label for="email">Электронная почта*:</label>
-                <div class="orm__line form__line--contact">
-                  <input class="form__contact" type="text" placeholder="Введите e-mail" id="email" required>
-                  <div class="form__icon form__icon--mail"></div>
+                <div class="contact-form__email">
+                  <input class="email-input" type="text" placeholder="Введите e-mail" id="email" required>
+                  <div class="contact-form__icon contact-form__icon--email"></div>
                 </div>
               </div>
             </div>
 
-            <div class="form">
-              <div class="form__legend ">
-               <span class="form__title">Ваше общее впечатление:</span>
+            <div class="impression-form">
+              <div class="impression-form__legend ">
+               <span class="impression-form__title">Ваше общее впечатление:</span>
                </div>
-              <div class="form__line form__line--impression">
-                <input class="form__impression" type="radio" name="impression" id="positive" checked>
+              <div class="impression-form__row">
+                <input class="positive" type="radio" name="impression" id="positive" checked>
                 <label for="positive">Скорее положительное</label>
               </div>
-              <div class="form__line form__line--impression">
-                <input class="form__impression" type="radio" name="impression" id="negative">
+              <div class="impression-form__row">
+                <input class="negative" type="radio" name="impression" id="negative">
                 <label for="negative">Скорее отрицательное</label>
               </div>
-              <div class="form__line form__line--impression">
-                <input class="form__impression" type="radio" name="impression" id="neutral">
+              <div class="impression-form__row">
+                <input class="neutral" type="radio" name="impression" id="neutral">
                 <label for="neutral">Затрудняюсь ответить</label>
               </div>
             </div>
 
-            <div class="form">
-              <div class="form__legend">
-                <span class="form__title">Посещенные достопримечательности:</span>
+            <div class="attraction-form">
+              <div class="attraction-form__legend">
+                <span class="attraction-form__title">Посещенные достопримечательности:</span>
               </div>
-                <div class="form__line form__line--atraction">
-                  <input class="form__atraction" type="checkbox" name="attraction" id="attraction-1" checked>
-                  <label for="attraction-1">Мост Дьявола</label>
+                <div class="attraction-form__row">
+                  <input class="attraction-form__item" type="checkbox" name="attraction" id="attraction-1" checked>
+                  <label for="attraction-form__item--1">Мост Дьявола</label>
                 </div>
-                <div class="form__line form__line--atraction">
-                  <input class="form__atraction" type="checkbox" name="attraction" id="attraction-2" checked>
-                  <label for="attraction-2">Слайд-парк</label>
+                <div class="attraction-form__row">
+                  <input class="attraction-form__item" type="checkbox" name="attraction" id="attraction-2" checked>
+                  <label for="attraction-form__item--2">Слайд-парк</label>
                 </div>
-                <div class="form__line form__line--atraction">
-                  <input class="form__atraction" type="checkbox" name="attraction" id="attraction-3">
-                  <label for="attraction-3">Гора-Колокол</label>
+                <div class="attraction-form__row">
+                  <input class="attraction-form__item" type="checkbox" name="attraction" id="attraction-3">
+                  <label for="attraction-form__item--3">Гора-Колокол</label>
                 </div>
-                <div class="form__line form__line--atraction">
-                  <input class="form__atraction" type="checkbox" name="attraction" id="attraction-4" checked>
-                  <label for="attraction-4">Красные скалы</label>
+                <div class="attraction-form__row">
+                  <input class="attraction-form__item" type="checkbox" name="attraction" id="attraction-4" checked>
+                  <label for="attraction-form__item--4">Красные скалы</label>
                 </div>
               </div>
             </div>
 
-            <div class="form-sections">
-              <div class="form__legend">
-                <span class="form__title">Опишите свои эмоции:</span>
+            <div class="review-form comment">
+              <div class="comment__legend">
+                <span class="comment__title">Опишите свои эмоции:</span>
               </div>
-              <div class="form__comment">
-                <textarea name="comment" placeholder="Опишите подробно все свои восторги"></textarea>
+              <div class="comment__input">
+                <textarea name="comment__input-area" placeholder="Опишите подробно все свои восторги"></textarea>
               </div>
             </div>
           </div>
 
-          <div class="form-submit">
+          <div class="main-form__submit">
             <input class="button button--submit" type="submit" value="Отправить отзыв">
-            <div class="form-submit__required">* — обязательные поля</div>
+            <div class="required">* — обязательные поля</div>
           </div>
 
       </section>
@@ -148,12 +148,12 @@
            <div class="main-footer__copyright copyright">
             <b class="copyright__text">Разработано</b>
             <a href="https://htmlacademy.ru/" class="copyright__link">
-            <svg class="copyright--icon"></svg></a>
+            <svg class="copyright__icon"></svg></a>
            </div>
          </div>
        </footer>
 
-       <div class="result result__success">
+       <div class="result result--success">
         <div class="result__description">
           <p class="result__title">Ваш отзыв отправлен!</p>
           <p class="result__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
@@ -163,7 +163,7 @@
         </div>
       </div>
 
-      <div class="result result__fail">
+      <div class="result result--fail">
         <div class="result__description">
           <p class="result__title">Что-то пошло не так!</p>
           <p class="result__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
