--- a/source/index.html
+++ b/source/index.html
@@ -12,11 +12,11 @@
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list site-list--opened">
-            <li class="site-list__item--active"><a href="#">Главная</a></li>
-            <li class="site-list__item"><a href="#">Фото и видео</a></li>
-            <li class="site-list__item"><a href="#">Формат отзыва</a></li>
-            <li class="site-list__item"><a href="#">HTML academy</a></li>
+          <ul class="main-nav__list main-nav__list--opened">
+            <li class="main-nav__item main-nav__item--active"><a href="#">Главная</a></li>
+            <li class="main-nav__item"><a href="#">Фото и видео</a></li>
+            <li class="main-nav__item"><a href="#">Формат отзыва</a></li>
+            <li class="main-nav__item"><a href="#">HTML academy</a></li>
           </ul>
         </div>
       </nav>
@@ -43,7 +43,7 @@
                 <p class="advantages__description">Седона не атракцион для туристов, там прячется своя жизнь</p>
                 <img src="img/photo-city@1x1.png" alt="Местный ресторан" class="advantages__photo">
 
-                <ul class="extra-advantages__list">
+                <ul class="extra-advantages">
                   <li class="extra-advantages__item extra-advantages__item--accomodation">
                     <h2 class="extra-advantages__title">Жилье</h2>
                     <p class="extra-advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
@@ -119,7 +119,7 @@
        <div class="main-footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a href="https://htmlacademy.ru/" class="copyright__link">
-        <svg class="copyright--icon"></svg></a>
+        <svg class="copyright__icon"></svg></a>
        </div>
      </div>
 
