--- a/source/form.html
+++ b/source/form.html
@@ -2,6 +2,7 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <link href="./css/style.css" rel="stylesheet">
     <title>HTML Academy: Седона  - оставьте свой отзыв!</title>
   </head>
   <body class="page__body">
@@ -159,7 +160,7 @@
           <p class="result__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
         </div>
         <div class="result__button">
-          <a href="#">Закрыть окно</a>
+          <a class="button" href="#">Закрыть окно</a>
         </div>
       </div>
 
@@ -169,7 +170,7 @@
           <p class="result__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
         </div>
         <div class="result__button">
-          <a href="#">Ок</a>
+          <a  class="button" href="#">Ок</a>
         </div>
       </div>
 
