--- a/source/index.html
+++ b/source/index.html
@@ -16,9 +16,9 @@
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list main-nav__list--opened">
-          <li class="main-nav__item main-nav__item--active"><a href="#">Главная</a></li>
-          <li class="main-nav__item"><a href="#">Фото и видео</a></li>
-          <li class="main-nav__item"><a href="#">Формат отзыва</a></li>
+          <li class="main-nav__item main-nav__item--active"><a href="index.html">Главная</a></li>
+          <li class="main-nav__item"><a href="catalog.html">Фото и видео</a></li>
+          <li class="main-nav__item"><a href="form.html">Формат отзыва</a></li>
           <li class="main-nav__item"><a href="#">HTML academy</a></li>
         </ul>
       </div>
@@ -67,12 +67,12 @@
         </li>
 
         <li class="advantages__item">
-         <div class="advantages__item--accent">
+          <div class="advantages__item--accent">
             <h3 class="advantages__title">Там есть Мост дьявола</h3>
             <p class="advantages__number">— №2 —</p>
             <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             <img src="img/photo-bridge@1x1.png" alt="Карьер" class="advantages__photo">
-         </div>
+          </div>
         </li>
 
         <li class="advantages__item">
