--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,131 +1,140 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Каталог</title>
-  </head>
-  <body class="page__body">
-    <header class="main-header">
-      <a href="/" class="main-header__icon">
-        <img src="img/logo.svg" width="185" height="96" alt="City of Cedona">
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list site-list--opened">
-            <li class="site-list__item"><a href="#">Главная</a></li>
-            <li class="site-list__item site-list__item--active"><a href="#">Фото и видео</a></li>
-            <li class="site-list__item"><a href="#">Формат отзыва</a></li>
-            <li class="site-list__item"><a href="#">HTML academy</a></li>
-          </ul>
+
+<head>
+  <meta charset="utf-8">
+  <link href="./css/style.css" rel="stylesheet">
+  <title>HTML Academy: Каталог</title>
+</head>
+
+<body class="page__body">
+  <header class="main-header">
+    <a href="/" class="main-header__icon">
+      <img src="img/logo.svg" width="185" height="96" alt="City of Cedona">
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list main-nav__list--opened">
+          <li class="main-nav__item"><a href="index.html">Главная</a></li>
+          <li class="main-nav__item main-nav__item--active"><a href="catalog.html">Фото и видео</a></li>
+          <li class="main-nav__item"><a href="form.html">Формат отзыва</a></li>
+          <li class="main-nav__item"><a href="#">HTML academy</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <div class="intro">
+    <img class="intro__background" src="img/back-mobile.png" alt="Background view">
+  </div>
+
+  <section class="catalog">
+    <div class="catalog-header">
+      <h1 class="catalog__title">Фото и видео</h1>
+      <p class="catalog__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о
+        политике и экономике.</p>
+    </div>
+
+    <div class="photo-container">
+      <article class="catalog-item">
+        <div class="catalog-item__photo">
+          <img src="img/photo-1-mobile.png" alt="Дорога на рассвете">
         </div>
-      </nav>
-    </header>
-
-        <div class="intro">
-          <img class="intro__background" src="img/back-mobile.png" alt="Background view">
+        <div class="catalog-item__description">
+          <span class="catalog-item__title">Неродные просторы</span><span class="catalog-item__author">Автор фото:
+            Борис</span>
         </div>
-
-        <section class="catalog">
-          <div class="catalog-header">
-            <h1 class="catalog__title">Фото и видео</h1>
-            <p class="catalog__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
-          </div>
-
-        <div class="photo-container">
-          <article class="catalog-item">
-          <div class="catalog-item__photo">
-            <img src="img/photo-1-mobile.png" alt="Дорога на рассвете">
-          </div>
-          <div class="catalog-item__description">
-            <span class="catalog-item__title">Неродные просторы</span><span class="catalog-item__author">Автор фото: Борис</span>
-          </div>
-          <div class="likes">
-            <svg class="likes__icon">
-            </svg>
-            <span class="likes__number">1350
-            </span>
-         </div>
-        </article>
-
-        <article class="catalog-item">
-          <div class="catalog-item__photo">
-            <img src="img/photo-2-mobile.png" alt="Цветок">
-          </div>
-          <div class="catalog-item__description">
-            <span class="catalog-item__title"></span>Месная растительность<span class="catalog-item__author">Автор фото: Сергей</span>
-          </div>
-          <div class="likes">
-            <svg class="likes__icon">
-            </svg>
-            <span class="likes__number">143
-            </span>
-         </div>
-         </article>
-
-         <article class="catalog-item">
-          <div class="catalog-item__photo">
-            <img src="img/photo-3-mobile.png" alt="Трасса в лесу">
-          </div>
-          <div class="catalog-item__description">
-            <span class="catalog-item__title">Дорога на север</span><span class="catalog-item__author">Автор фото: Петр</span>
-          </div>
-          <div class="likes">
-            <svg class="likes__icon">
-            </svg>
-            <span class="likes__number">96
-            </span>
-          </div>
-          </article>
-
-          <article class="catalog-item">
-            <div class="catalog-item__photo">
-            <img src="img/photo-4-desktop1.png" alt="Виды с карьера">
-          </div>
-          <div class="catalog-item__description">
-            <span class="catalog-item__title">Мост дьявола</span><span class="catalog-item__author">Автор фото: Антон</span>
-          </div>
-          <div class="likes">
-            <svg class="likes__icon">
-            </svg>
-            <span class="likes__number">254
-            </span>
-          </div>
-          </article>
+        <div class="likes">
+          <svg class="likes__icon">
+          </svg>
+          <span class="likes__number">1350
+          </span>
         </div>
-      </section>
+      </article>
 
-        <section class="main-promo">
-          <div class="main-promo__wrapper">
-            <h2 class="main-promo__title">Все еще сомневаетесь?</h2>
-            <p class="main-promo__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-            <img src="img/video-mobile.png" alt="Video">
-          </div>
-        </section>
+      <article class="catalog-item">
+        <div class="catalog-item__photo">
+          <img src="img/photo-2-mobile.png" alt="Цветок">
+        </div>
+        <div class="catalog-item__description">
+          <span class="catalog-item__title"></span>Месная растительность<span class="catalog-item__author">Автор фото:
+            Сергей</span>
+        </div>
+        <div class="likes">
+          <svg class="likes__icon">
+          </svg>
+          <span class="likes__number">143
+          </span>
+        </div>
+      </article>
 
-        <footer class="main-footer">
-          <div class="main-footer__wrapper">
-           <h2 class="main-footer__slogan">#VISITSEDONA</h2>
-            <div class="main-footer__social social">
-              <b class="social__title">Давайте дружить!</b>
-              <ul class="social__list">
-                <li class="social__item">
-                  <a class="social__link social__link--vkontakte" href="#">Вконтакте</a>
-                </li>
-                <li class="social__item">
-                  <a class="social__link social__link--telegram" href="#">Телеграмм</a>
-                </li>
-                <li class="social__item">
-                  <a class="social__link social__link--youtube" href="#">Ютуб</a>
-                </li>
-              </ul>
-           </div>
-           <div class="main-footer__copyright copyright">
-            <b class="copyright__text">Разработано</b>
-            <a href="https://htmlacademy.ru/" class="copyright__link">
-            <svg class="copyright__icon"></svg></a>
-           </div>
-         </div>
-       </footer>
-  </body>
+      <article class="catalog-item">
+        <div class="catalog-item__photo">
+          <img src="img/photo-3-mobile.png" alt="Трасса в лесу">
+        </div>
+        <div class="catalog-item__description">
+          <span class="catalog-item__title">Дорога на север</span><span class="catalog-item__author">Автор фото:
+            Петр</span>
+        </div>
+        <div class="likes">
+          <svg class="likes__icon">
+          </svg>
+          <span class="likes__number">96
+          </span>
+        </div>
+      </article>
+
+      <article class="catalog-item">
+        <div class="catalog-item__photo">
+          <img src="img/photo-4-desktop1.png" alt="Виды с карьера">
+        </div>
+        <div class="catalog-item__description">
+          <span class="catalog-item__title">Мост дьявола</span><span class="catalog-item__author">Автор фото:
+            Антон</span>
+        </div>
+        <div class="likes">
+          <svg class="likes__icon">
+          </svg>
+          <span class="likes__number">254
+          </span>
+        </div>
+      </article>
+    </div>
+  </section>
+
+  <section class="main-promo">
+    <div class="main-promo__wrapper">
+      <h2 class="main-promo__title">Все еще сомневаетесь?</h2>
+      <p class="main-promo__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
+        очередной раз!</p>
+      <img src="img/video-mobile.png" alt="Video">
+    </div>
+  </section>
+  <footer class="main-footer">
+    <div class="main-footer__wrapper">
+      <h2 class="main-footer__slogan">#VISITSEDONA</h2>
+      <div class="main-footer__social social">
+        <b class="social__title visually-hidden">Давайте дружить!</b>
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte visually-hidden" href="#">Вконтакте</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--telegram visually-hidden" href="#">Телеграмм</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube visually-hidden" href="#">Ютуб</a>
+          </li>
+        </ul>
+      </div>
+      <div class="main-footer__copyright copyright">
+        <b class="copyright__text">Разработано</b>
+        <a href="https://htmlacademy.ru/" class="copyright__link">
+          <svg class="copyright__icon"></svg></a>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
