--- a/source/form.html
+++ b/source/form.html
@@ -135,17 +135,17 @@
   <footer class="main-footer">
     <div class="main-footer__wrapper">
       <h2 class="main-footer__slogan">#VISITSEDONA</h2>
-      <div class="main-footer__social social">
-        <b class="social__title visually-hidden">Давайте дружить!</b>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte visually-hidden" href="#">Вконтакте</a>
+      <div class="main-footer__social-media social-media">
+        <b class="social-media__title visually-hidden">Давайте дружить!</b>
+        <ul class="social-media__list">
+          <li class="social-media__item">
+            <a class="social-media__link social-media__link--vkontakte visually-hidden" href="#">Вконтакте</a>
           </li>
-          <li class="social__item">
-            <a class="social__link social__link--telegram visually-hidden" href="#">Телеграмм</a>
+          <li class="social-media__item">
+            <a class="social-media__link social-media__link--telegram visually-hidden" href="#">Телеграмм</a>
           </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube visually-hidden" href="#">Ютуб</a>
+          <li class="social-media__item">
+            <a class="social-media__link social-media__link--youtube visually-hidden" href="#">Ютуб</a>
           </li>
         </ul>
       </div>
