--- a/source/index.html
+++ b/source/index.html
@@ -41,7 +41,7 @@
       <h2 class="visually-hidden">Преимущества</h2>
       <ul class="advantages__list">
         <li class="advantages__item">
-          <div class="advantages__item--accent">
+          <div class="advantages__container advantages__container--accent">
             <h3 class="advantages__title">НАСТОЯЩИЙ ГОРОДОК</h3>
             <p class="advantages__number">— №1 —</p>
             <p class="advantages__description">Седона не атракцион для туристов, там прячется своя жизнь</p>
@@ -67,7 +67,7 @@
         </li>
 
         <li class="advantages__item">
-          <div class="advantages__item--accent">
+          <div class="advantages__container advantages__container--accent">
             <h3 class="advantages__title">Там есть Мост дьявола</h3>
             <p class="advantages__number">— №2 —</p>
             <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
