--- a/source/form.html
+++ b/source/form.html
@@ -163,7 +163,7 @@
       <p class="result__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его
         на сайте.</p>
     </div>
-    <div class="result__button">
+    <div class="button result__button">
       <a class="button" href="#">Закрыть окно</a>
     </div>
   </div>
@@ -173,7 +173,7 @@
       <p class="result__title">Что-то пошло не так!</p>
       <p class="result__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
     </div>
-    <div class="result__button">
+    <div class="button result__button">
       <a class="button" href="#">Ок</a>
     </div>
   </div>
