--- a/source/form.html
+++ b/source/form.html
@@ -14,9 +14,9 @@
       <img src="img/logo.svg" width="185" height="96" alt="City of Cedona">
     </a>
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <div class="main-nav__wrapper">
-        <ul class="main-nav__list main-nav__list--opened">
+        <ul class="main-nav__list main-nav__list--opened main-nav__list--nojs">
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
           <li class="main-nav__item"><a href="index.html">Главная</a></li>
           <li class="main-nav__item"><a href="catalog.html">Фото и видео</a></li>
           <li class="main-nav__item main-nav__item--active"><a href="form.html">Формат отзыва</a></li>
@@ -111,12 +111,12 @@
           </div>
         </div>
 
-        <div class="review-form comment">
-          <div class="comment__legend">
-            <span class="comment__title">Опишите свои эмоции:</span>
+        <div class="comment-form">
+          <div class="comment-form__legend">
+            <span class="comment-form__title">Опишите свои эмоции:</span>
           </div>
-          <div class="comment__input">
-            <textarea name="comment__input-area" placeholder="Опишите подробно все свои восторги"></textarea>
+          <div class="comment-form__input">
+            <textarea name="comment-form__input-area" placeholder="Опишите подробно все свои восторги"></textarea>
           </div>
         </div>
       </div>
