made a few changes

--- a/source/index.html
+++ b/source/index.html
@@ -17,10 +17,10 @@
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list main-nav__list--opened">
-          <li class="main-nav__item main-nav__item--active"><a href="index.html">Главная</a></li>
-          <li class="main-nav__item"><a href="catalog.html">Фото и видео</a></li>
-          <li class="main-nav__item"><a href="form.html">Формат отзыва</a></li>
-          <li class="main-nav__item"><a href="#">HTML academy</a></li>
+          <li class="main-nav__item main-nav__item--active main-nav__item"><a href="index.html">Главная</a></li>
+          <li class="main-nav__item main-nav__item"><a href="catalog.html">Фото и видео</a></li>
+          <li class="main-nav__item main-nav__item"><a href="form.html">Формат отзыва</a></li>
+          <li class="main-nav__item main-nav__item"><a href="#">HTML academy</a></li>
         </ul>
       </div>
     </nav>
@@ -120,7 +120,12 @@
         <h2 class="location__title">Заинтересовались?</h2>
         <p class="location__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
           гостиниц в Cедоне</p>
-        <button class="button location__button" type="button"><span>Найти гостинницу</span></button>
+          <button class="button location__button" type="button"><span>Найти гостинницу</span></button>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d108105.83161662407!2d-112.50506338481702!3d34.53528043919237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b08ebcb4c186b%3A0x423927b17fc1cd71!2sArizona%2C%20USA!5e0!3m2!1sen!2sca!4v1663660750784!5m2!1sen!2sca" width="600" height="450" style="border:0;" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+           height="350"
+           allowfullscreen
+           title="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург"
+         ></iframe>
       </div>
     </section>
   </main>
