--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,12 +14,12 @@
       <img src="img/logo.svg" width="185" height="96" alt="City of Cedona">
     </a>
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <div class="main-nav__wrapper">
-        <ul class="main-nav__list main-nav__list--opened">
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <ul class="main-nav__list main-nav--closed">
           <li class="main-nav__item"><a href="index.html">Главная</a></li>
-          <li class="main-nav__item"><a href="catalog.html">Фото и видео</a></li>
-          <li class="main-nav__item main-nav__item--active"><a href="form.html">Формат отзыва</a></li>
+          <li class="main-nav__item main-nav__item--active"><a href="catalog.html">Фото и видео</a></li>
+          <li class="main-nav__item--4"><a href="form.html">Формат отзыва</a></li>
           <li class="main-nav__item"><a href="#">HTML academy</a></li>
         </ul>
       </div>
